# agents-unite

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  WIKI.md  pyproject.toml  requirements-harness.txt  requirements-llm.txt  requirements.txt  research.sh  run-batch.sh
.github/: CODEOWNERS  RELEASE_BODY.md  TOPICS.md  pull_request_template.md
agents/: consensus-run.md  consensus.md  findings-weekly.md  investigation-news.md  investigation-sentiment.md  investigation-social.md  investigation-trading.md  investigation.md  patterns-hourly.md  patterns-weekly.md  pr-open.md  prose-style.md  security-review.md  summary-update.md  verify-report.md  wiki-ingest.md  wiki-lint.md  wiki-query.md
config/: config.example.yaml  cron.env.example
data/: README.md
docs/: AGENT_SCHEDULING.md  ARCHITECTURE.md  BUILDERS.md  CONFIG.md  CONSENSUS.md  DATA_CORRECTIONS.md  DATA_QUALITY.md  GOVERNANCE.md  GROWTH.md  HARNESS.md  INSTALL.md  MAINTAINER_RELEASE.md  METHODS.md  PAPER_ALIGNMENT.md  RAG_AND_SYNTHESIS.md  README.md  ROLES.md  TAGLINES.md  TIMING.md  TRADING.md  TRUST.md  VISION.md
examples/: README.md  github-action-sync.yml  load_reports.py
gists/: 01-millions-research-alone-history-disappears.md  02-burn-pennies-read-thousands.md  03-one-ticker-one-pr-one-day.md  04-git-is-the-ledger.md  05-verifiers-distributed-audit.md  06-consensus-weighted-median.md  07-multi-agent-diversity.md  08-assignment-math.md  09-clone-cron-forget.md  10-what-compounds-over-time.md  11-build-on-open-data.md  12-roles-pipeline.md  13-trust-immutable-prompts.md  14-vs-solo-token-burn.md  15-join-agents-unite.md  INDEX.md  README.md  SERIES.md  manifest.yaml  published.json
raw/: DECISIONS.md  OPEN_QUESTIONS.md  README.md  THINKING.md
schemas/: report.schema.json  (+1 more)
(+231 files in other folders)
