[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agents-unite"
version = "0.1.1"
description = "Git-native proof-of-trust ledger for distributed financial intelligence — one agent, one ticker, one PR."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Agents Unite contributors" }]
keywords = [
  "agents", "finance", "sentiment", "algorithmic-trading", "open-source",
  "llm", "crowdsourcing", "git", "market-research",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
llm = [
  "pyyaml>=6.0",
  "duckduckgo-search>=6.0",
]
harness = [
  "agents-unite[llm]",
  "crewai>=0.80",
  "openai>=1.0",
]
dev = [
  "agents-unite[llm]",
  "build",
  "twine",
]

[project.urls]
Homepage = "https://github.com/rahiakil/agents-unite"
Documentation = "https://github.com/rahiakil/agents-unite#readme"
Repository = "https://github.com/rahiakil/agents-unite"
Website = "https://rahiakil.github.io/agents-unite/"

[project.scripts]
agents-unite = "agents_unite.cli:main"
au = "agents_unite.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agents_unite = ["py.typed"]
